# mrs_uav_autostart

./: CMakeLists.txt  README.md  nodelets.xml  package.xml  plugins.xml
.github/workflows/: rostest.yml
config/: automatic_start.yaml
config/private/: automatic_start.yaml
config/public/: automatic_start.yaml
launch/: automatic_start.launch
scripts/: get_public_params.py
src/: automatic_start.cpp
test/: CMakeLists.txt  all_tests.sh  coverage.sh  single_test.sh
test/basic/: basic.test  test.cpp
test/basic/launch/: mrs_uav_system.launch
test/gazebo_takeoff/: gazebo_takeoff.test
test/moving_drone/: moving_drone.test  test.cpp
test/moving_drone/config/: mrs_simulator.yaml
test/moving_drone/launch/: hw_api.launch
test/outside_safety_area/: test.cpp
test/takeoff/: takeoff.test  test.cpp
test/topic_check/: test.cpp  topic_check.test
test/topic_check/config/: automatic_start.yaml
test/without_takeoff/: test.cpp  without_takeoff.test
