<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_autostart</name>
  <version>1.0.4</version>
  <description>The mrs_uav_autostart package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>topic_tools</depend>
  <depend>mrs_uav_testing</depend>

  <test_depend>mrs_uav_gazebo_simulation</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
